--- a/Soln2/index.html
+++ b/Soln2/index.html
@@ -10,7 +10,7 @@
  * { 
    box-sizing: border-box;
    font-family: Helvetica, sans-serif;
-   background-color: #ffdd77;
+   background-color: #ffffff;
  } 
 
  h1 { 
