change background colour

--- a/Soln2/index.html
+++ b/Soln2/index.html
@@ -31,7 +31,7 @@
    padding: 45px 10px 30px 10px;
  }
 
- p.sectionHeader 
+ p.sectionHeader {
  	border: 1px solid black;
  	font-size: 125%;
  	margin-right: 5%;
