--- a/Soln2/index.html
+++ b/Soln2/index.html
@@ -18,12 +18,16 @@
    text-align: center;
    font-size: 175%;
  } 
+
+ div {
+   position: relative;
+ }
   
  p.desc { 
    border: 1px solid black; 
    background-color: #ffffcc; 
    width: 90%; 
-   height: 150px; 
+   height: 30%; 
    margin-right: auto; 
    margin-left: auto; 
    font-family: Helvetica; 
@@ -32,12 +36,13 @@
  }
 
  p.sectionHeader {
+ 	position: absolute;
  	border: 1px solid black;
  	font-size: 125%;
- 	margin-right: 5%;
- 	margin-top: 3%;
+ 	right: 5%;
+ 	top: -4px;
  	width: 36%;
- 	height: 8%;
+ 	height: 20%;
  	float: right;
  	padding: 4px;
  	text-align: center;
