--- a/Soln3/index.html
+++ b/Soln3/index.html
@@ -28,13 +28,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" id="muck" href="#">Food, LLC</a>
+        <a class="navbar-brand" href="#">Food, LLC</a>
       </div> <!-- navbar-header -->
 
       <!-- Create dropdown menu for toggle-->
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="collapsable-nav">
-        <ul class="nav navbar-nav" id="dropper">
+        <ul class="nav navbar-nav, visible-xs" id="dropper">
           <li class="active"><a href="#" id="dropper">Chicken<span class="sr-only">(current)</span></a></li>
           <li><a href="#">Beef</a></li>
           <li><a href="#">Sushi</a></li>
