--- a/Soln3/index.html
+++ b/Soln3/index.html
@@ -18,7 +18,7 @@
   </head>
 <body>
 <header>
-  <nav class="navbar navbar-default">
+  <nav id="header-nav" class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
